# onyx

./: Cargo.toml
src/: app.rs  main.rs  settings.rs  state.rs
src/filesystem/: mod.rs  modify.rs  read.rs  utils.rs  write.rs
src/ui/: info_line.rs  input.rs  mod.rs  side_panel.rs  utils.rs
