[package]
name = "onyx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26"
ratatui = "0.22"
eyre = "0.6.8"
tokio = { version = "1.29.1", features = ["full"] }
clap = { version = "4.3.17", features = ["derive"] }
tracing = { version = "0.1.37", optional = true }

[features]
default = []
logging = ["dep:tracing"]
