[package]
name = "onyx"
version = "0.1.0"
authors = ["YummyOreo"]
edition = "2021"

[[bin]]
name = "ox"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26"
ratatui = { version = "0.22", features = ["all-widgets"] }
eyre = "0.6.8"
tokio = { version = "1.29.1", features = ["full"] }
clap = { version = "4.3.21", features = ["derive"] }
tracing = { version = "0.1.37", optional = true }
regex = "1.9.1"
syntect = "5.0"

[features]
default = []
logging = ["dep:tracing"]
